--- a/style.css
+++ b/style.css
@@ -31,23 +31,31 @@ border-radius: 12px;
 }
 
 
+
+#demo{
+  font-weight: 600;
+  border-radius: 12px;
+  padding: 12px;
+  transition: height;
+  transition: border;
+}
+
+
 button{
   border: none;
   background-color:#05c560;
-  color: #05c560;
-  padding: 8px 59px;
+  color: white;
+  padding: 18px 59px;
   border-radius: 12px;
   margin: 1rem;
   display: flex;
   font-size: 1rem;
-  
+  cursor: pointer;
 }
 
-#demo{
-  background-color: #05c55f0e;
-  padding: 5px 12px;
-  border-radius: 8px;
-  font-weight: 500;
+button:hover{
+  opacity: .8;
+
 }
 
 .ri-download-line{
@@ -70,7 +78,9 @@ padding: 20px 5px;
   width: 400px;
   max-width: 90%;
   border: 1px solid rgb(255, 255, 255);
-  height: 500px;
+  /* height: 500px; */
+  max-height: 600px;
+ 
   border: 1px solid rgb(246, 248, 255);
   border-radius: 12px;
   color: #101922;
@@ -108,7 +118,7 @@ header{
 
 
 .file-info{
-  padding: 12px 0px;
+  padding: 5px 0px;
   display: flex;
   flex-direction: column;
   margin: 0 auto;
@@ -143,23 +153,6 @@ transform: scale(1);
 
 }
 
-.ri-lock-unlock-line{
-  
-    display: inline-flex;
-   font-size: 1rem;
-   height: 40px;
-   width: 40px;
-   align-items: center;
-   justify-content: center;
-   border-radius: 50%;
-   margin: auto;
-   transform: scale(1);
-     animation: bounce 2s infinite;
-     color: #f6fbff;
-   
-   }
-
-
 p{
   font-weight: 200;
   margin: .6rem;
@@ -171,7 +164,7 @@ h1{
   display: block;
   width: 90%;
   justify-content: center;
-  margin-top: 1rem;
+  margin-top: .5rem;
   font-size: 1.5rem
 }
 
@@ -186,7 +179,7 @@ h4{
   justify-content: center;
   /* margin-top: 0.5rem; */
  background-color: #05c560;
- padding: 12px 12px;
+ padding: 8px 12px;
  /* color: var(--dark); */
  color: white;
 }
@@ -194,7 +187,10 @@ h4{
 .bottom{
   display: flex;
   gap: 1rem;
-  padding-bottom: 2rem;
+}
+
+div, h1, h2, h3, h4, h5, p{
+  padding: 0;
 }
 
 .download-issues a{
@@ -202,6 +198,76 @@ h4{
   color: rgb(27, 61, 251);
   font-weight: 600;
   border-bottom: 1px solid rgb(27, 61, 251);
+}
+
+.js-retry-location{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.js-retry-location a{
+  color: #05c560;
+  text-decoration: underline;
+}
+
+.js-retry-location button{
+  background-color: #05c560;
+  color: white;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  padding: 5px;
+  display: flex;
+ justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  animation: pulseGreen 2s infinite;
+  margin: 0 auto;
+
+}
+
+footer{
+  display: flex;
+  margin: auto;
+  flex-direction: column;
+  justify-content: center;
+  place-items: center;
+  background-color: #05c560;
+  color: white;
+  width: 300px;
+  padding: 12px;
+  margin-bottom: 12px;
+  border-radius: 12px;
+bottom: 0;
+left:40%
+}
+
+.icons{
+  display: flex;
+  background-color: none;
+}
+
+.icons i{
+  display: inline-flex;
+  justify-content: space-between;
+  border: 1px solid white;
+  border-radius: 50%;
+  gap: 20px;
+  padding: 10px;
+  opacity: .4;
+  justify-content: center;
+}
+
+.icons i:first-child{
+  display: inline-flex;
+  justify-content: space-between;
+ background-color: #05c560;
+  border-radius: 50%;
+  gap: 20px;
+  padding: 10px;
+  margin: 0 12px;
+  opacity: 1;
 }
 
 
@@ -218,24 +284,34 @@ h4{
 
 	100% {
 		transform: scale(0.95);
-		box-shadow: 0 0 0 0 rgba(234, 22, 22, 0);
+		box-shadow: 0 0 0 0 rgba(100, 255, 129, 0.7);
 	}
 }
 
-
-@keyframes bounce {
+@keyframes pulseGreen {
 	0% {
 		transform: scale(0.95);
-		
+		box-shadow: 0 0 0 0 rgba(100, 255, 129, 0.7);
 	}
 
-	70% {
-		transform: scale(1.2);
-		
+	
+
+  70% {
+		transform: scale(1);
+		box-shadow: 0 0 0 10px rgba(5, 249, 87, 0.2);
 	}
 
 	100% {
-		transform: scale(0.95);
-	
+		transform: scale(.95);
+		box-shadow: 0 0 0 0 rgba(74, 255, 50, 0);
 	}
+}
+
+#info h1{
+  font-size: 1rem;
+  font-weight: 600;
+}
+
+#info{
+  padding: 22px;
 }
