--- a/style.css
+++ b/style.css
@@ -24,6 +24,7 @@ body{
   max-width: 400px;
   bottom: 0;
 margin-top: 30px;  left: 50px;
+border: solid 1px rgb(237, 237, 237);
 
 border-radius: 12px;
 
