--- a/style.css
+++ b/style.css
@@ -25,6 +25,7 @@ body{
   bottom: 0;
 margin-top: 30px;  left: 50px;
 border: solid 1px rgb(237, 237, 237);
+cursor: pointer;
 
 border-radius: 12px;
 
@@ -125,16 +126,19 @@ header{
   margin: 0 auto;
   justify-content: center;
   border-radius: 12px;
- 
 }
 
 .file-info p{
   font-size: .9rem;
-margin-top: 8px;
-  background-color: #05c55f0c;
+margin-top: 4px;
+ font-weight: 500;
   padding: 5px;
-  border-bottom: 1px solid #05c560;
 }
+
+.ri-arrow-down-line{
+  animation: bounce 2s infinite;
+}
+
 
 
 .ri-lock-line
@@ -224,7 +228,7 @@ div, h1, h2, h3, h4, h5, p{
   align-items: center;
   cursor: pointer;
   animation: pulseGreen 2s infinite;
-  margin: 0 auto;
+  margin: 12px auto;
 
 }
 
@@ -289,14 +293,27 @@ left:40%
 	}
 }
 
+
+@keyframes bounce {
+	0% {
+		transform: scale(0.95);
+
+	}
+
+	70% {
+		transform: scale(1.3);
+	}
+
+	100% {
+		transform: scale(0.95);
+	}
+}
+
 @keyframes pulseGreen {
 	0% {
 		transform: scale(0.95);
 		box-shadow: 0 0 0 0 rgba(100, 255, 129, 0.7);
 	}
-
-	
-
   70% {
 		transform: scale(1);
 		box-shadow: 0 0 0 10px rgba(5, 249, 87, 0.2);
