--- a/style.css
+++ b/style.css
@@ -1,22 +1,17 @@
-
-
 :root{
   --dark:#101922;
+  --green:#05c560;
 }
 *{
   padding: 0; 
  margin: 0 ;
   box-sizing: border-box;
 }
-
 body{
   max-width: 100vw;
-  /* background-color: #0c1016 ; */
-
   font-family: "Outfit", sans-serif;
   text-align: center;
 }
-
 .ad img{
   justify-content: center;
   display: inline-flex;
@@ -26,21 +21,15 @@ body{
 margin-top: 30px;  left: 50px;
 border: solid 1px rgb(237, 237, 237);
 cursor: pointer;
-
 border-radius: 12px;
-
-  /* max-height: 100px; */
 }
-
-
-
 #demo{
   font-weight: 600;
   border-radius: 12px;
   padding: 12px;
-  transition: height;
-  transition: border;
+ transition: ease-in-out;
   border: 1px dashed red;
+  transition: cubic-bezier(0.455, 0.03, 0.515, 0.955);
 }
 
 
@@ -109,16 +98,12 @@ header{
 .ri-github-fill{
   margin-right: .5rem;
 }
-
-
 .ri-folder-image-line  {
   font-size: 4rem;
   margin: 0 auto;
  /* border: 1px solid #05c560;
  border-radius: 12px; */
 }
-
-
 
 .file-info{
   padding: 5px 0px;
@@ -184,7 +169,7 @@ h4{
   font-weight: 400;
   justify-content: center;
   /* margin-top: 0.5rem; */
- background-color: #05c560;
+ background-color: var(--green);
  padding: 8px 12px;
  /* color: var(--dark); */
  color: white;
@@ -213,12 +198,11 @@ div, h1, h2, h3, h4, h5, p{
 }
 
 .js-retry-location a{
-  color: #05c560;
+  color: var(--green);
   text-decoration: underline;
 }
-
 .js-retry-location button{
-  background-color: #05c560;
+  background-color: var(--green);
   color: white;
   width: 40px;
   height: 40px;
@@ -239,7 +223,7 @@ footer{
   flex-direction: column;
   justify-content: center;
   place-items: center;
-  background-color: #05c560;
+  background-color: var(--green);
   color: white;
   width: 300px;
   padding: 12px;
@@ -268,12 +252,26 @@ left:40%
 .icons i:first-child{
   display: inline-flex;
   justify-content: space-between;
- background-color: #05c560;
+ background-color: var(--green);
   border-radius: 50%;
   gap: 20px;
   padding: 10px;
   margin: 0 12px;
   opacity: 1;
+}
+
+.meta{
+  display:flex;
+  align-items: center;
+  gap: 3px;
+  opacity: .2;
+  font-size: .75rem;
+  cursor: pointer;
+}
+
+.meta:hover{
+  opacity: .8;
+  transition: cubic-bezier(0.175, 0.885, 0.32, 1.275);
 }
 
 
@@ -293,7 +291,6 @@ left:40%
 		box-shadow: 0 0 0 0 rgba(100, 255, 129, 0.7);
 	}
 }
-
 
 @keyframes bounce {
 	0% {
