--- a/style.css
+++ b/style.css
@@ -271,7 +271,8 @@ left:40%
 
 .meta:hover{
   opacity: .8;
-  transition: cubic-bezier(0.175, 0.885, 0.32, 1.275);
+  transition: opacity  ease-in-out 1s;
+
 }
 
 
