--- a/style.css
+++ b/style.css
@@ -332,3 +332,57 @@ left:40%
 #info{
   padding: 22px;
 }
+
+/* ScrollBar */
+
+@keyframes scroll_1 {
+  0%   { transform: translateY(0); }
+  25%  { transform: translateY(-0.6em); }
+  50%  { transform: translateY(0); }
+  75%  { transform: translateY(0.6em); }
+  100% { transform: translateY(0); }
+}
+
+@keyframes scroll_1 {
+  0%   { transform: translateY(0); }
+  25%  { transform: translateY(-0.6em); }
+  50%  { transform: translateY(0); }
+  75%  { transform: translateY(0.6em); }
+  100% { transform: translateY(0); }
+}
+
+
+.scroll-downs {
+  position: fixed;
+  right: 0;
+  bottom: 15%;
+  left: 0;
+  margin: auto;
+  width :29px;
+  height: 38px;
+
+}
+.mousey {
+  width: 3px;
+  padding: 5px 10px;
+  height: 35px;
+  border: 1px solid var(--dark) ;
+  border-radius: 25px;
+  opacity: 0.75;
+  box-sizing: content-box;
+}
+.scroller {
+  width: 3px;
+  height: 10px;
+  border-radius: 25%;
+  background-color: var(--dark);
+  animation-name: scroll;
+  animation-duration: 2.2s;
+  animation-timing-function: cubic-bezier(.15,.41,.69,.94);
+  animation-iteration-count: infinite;
+}
+@keyframes scroll {
+  0% { opacity: 0; }
+  10% { transform: translateY(0); opacity: 1; }
+  100% { transform: translateY(15px); opacity: 0;}
+}
