--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ body{
   max-width: 100vw;
   font-family: "Outfit", sans-serif;
   text-align: center;
+  
 }
 .ad img{
   justify-content: center;
@@ -18,7 +19,8 @@ body{
   width: 90%;
   max-width: 400px;
   bottom: 0;
-margin-top: 30px;  left: 50px;
+  margin-top: 1rem ;
+/* margin-top: 30px;  left: 50px; */
 border: solid 1px rgb(237, 237, 237);
 cursor: pointer;
 border-radius: 12px;
@@ -43,6 +45,7 @@ button{
   display: flex;
   font-size: 1rem;
   cursor: pointer;
+  gap: .5rem;
 }
 
 button:hover{
@@ -60,13 +63,15 @@ strong{
 }
 
 .container{
+  background-color: rgb(38, 36, 36);
   display: flex;
+  color: white;
   margin: auto;
   flex-direction: column;
   justify-content: center;
   place-items: center;
 padding: 20px 5px;
-  margin-top: .8rem;
+  margin-top: 1rem;
   width: 400px;
   max-width: 90%;
   border: 1px solid rgb(255, 255, 255);
@@ -75,7 +80,7 @@ padding: 20px 5px;
  
   border: 1px solid rgb(246, 248, 255);
   border-radius: 12px;
-  color: #101922;
+  /* color: #101922; */
   box-shadow: rgba(50, 50, 93, 0.15) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
 }
 
@@ -93,6 +98,7 @@ header{
   justify-content: center;
   display: block;
   gap: 1rem;
+   color: #101922;
 }
 
 .ri-github-fill{
@@ -284,12 +290,12 @@ left:40%
 
 	70% {
 		transform: scale(1);
-		box-shadow: 0 0 0 10px rgba(226, 10, 10, 0);
+		box-shadow: 0 0 0 15px rgba(226, 10, 10, 0);
 	}
 
 	100% {
 		transform: scale(0.95);
-		box-shadow: 0 0 0 0 rgba(100, 255, 129, 0.7);
+		box-shadow: 0 0 0 0 rgba(218, 12, 12, 0.7);
 	}
 }
 
@@ -331,7 +337,10 @@ left:40%
 
 #info{
   padding: 22px;
+  margin-bottom: 1rem;
+
 }
+
 
 /* ScrollBar */
 
